[project]
name = "Comfyui-HunyuanFoley"
description = "Generate Audio from any video and or text"
version = "2.0.6"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/aistudynow/Comfyui-HunyuanFoley"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "aistudynow"
DisplayName = "Comfyui-HunyuanFoley"

Icon = "icon.png"




